--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -91,6 +91,10 @@
             <artifactId>bson</artifactId>
             <version>4.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
     </dependencies>
     
     <build>
